NetBSD Problem Report #48163
From www@NetBSD.org Thu Aug 29 14:17:55 2013
Return-Path: <www@NetBSD.org>
Received: from mail.netbsd.org (mail.netbsd.org [149.20.53.66])
(using TLSv1 with cipher DHE-RSA-AES256-SHA (256/256 bits))
(Client CN "mail.NetBSD.org", Issuer "Postmaster NetBSD.org" (verified OK))
by mollari.NetBSD.org (Postfix) with ESMTPS id 44AB97050C
for <gnats-bugs@gnats.NetBSD.org>; Thu, 29 Aug 2013 14:17:55 +0000 (UTC)
Message-Id: <20130829141753.BF5AD71B57@mollari.NetBSD.org>
Date: Thu, 29 Aug 2013 14:17:53 +0000 (UTC)
From: dennis.c.ferguson@gmail.com
Reply-To: dennis.c.ferguson@gmail.com
To: gnats-bugs@NetBSD.org
Subject: Typo in evbarm/beagle/beagle_machdep.c: VERBOSE_INIT_ARM, not VERBOSE_ARM_INIT
X-Send-Pr-Version: www-1.0
>Number: 48163
>Category: port-arm
>Synopsis: Typo in evbarm/beagle/beagle_machdep.c: VERBOSE_INIT_ARM, not VERBOSE_ARM_INIT
>Confidential: no
>Severity: non-critical
>Priority: low
>Responsible: port-arm-maintainer
>State: closed
>Class: sw-bug
>Submitter-Id: net
>Arrival-Date: Thu Aug 29 14:20:00 +0000 2013
>Closed-Date: Thu Aug 29 15:47:49 +0000 2013
>Last-Modified: Thu Aug 29 15:50:01 +0000 2013
>Originator: Dennis Ferguson
>Release: 6.99.23
>Organization:
>Environment:
NetBSD beagle4.to.akit-ferguson.com 6.99.23 NetBSD 6.99.23 (BEAGLEBONE) #0: Fri Aug 2 02:14:24 EDT 2013 dennis@ts1.to.mistimed.ca:/usr/obj/sys/arch/evbarm/compile/BEAGLEBONE evbarm
>Description:
The VERBOSE_INIT_ARM kernel option makes arm kernels print more stuff when booting. In one spot in sys/arch/evbarm/beagle/beagle_machdep.c where this is used it is mistyped as VERBOSE_ARM_INIT.
>How-To-Repeat:
>Fix:
Index: sys/arch/evbarm/beagle/beagle_machdep.c
===================================================================
RCS file: /cvsroot/src/sys/arch/evbarm/beagle/beagle_machdep.c,v
retrieving revision 1.54
diff -u -r1.54 beagle_machdep.c
--- sys/arch/evbarm/beagle/beagle_machdep.c 30 Jul 2013 22:23:45 -0000 1.54
+++ sys/arch/evbarm/beagle/beagle_machdep.c 29 Aug 2013 14:10:23 -0000
@@ -489,7 +489,7 @@
OMAP_L4_PERIPHERAL_VBASE - OMAP_L4_PERIPHERAL_BASE;
arml2cc_init(&omap_bs_tag, pl310_bh, 0);
#endif
-#if defined(TI_AM335X) && defined(VERBOSE_ARM_INIT)
+#if defined(TI_AM335X) && defined(VERBOSE_INIT_ARM)
am335x_cpu_clk(); // find our CPU speed.
#endif
#if 1
>Release-Note:
>Audit-Trail:
State-Changed-From-To: open->closed
State-Changed-By: riz@NetBSD.org
State-Changed-When: Thu, 29 Aug 2013 15:47:49 +0000
State-Changed-Why:
Fix applied, thanks! (Found a couple more while I was at it, too)
From: "Jeff Rizzo" <riz@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc:
Subject: PR/48163 CVS commit: src/sys/arch
Date: Thu, 29 Aug 2013 15:46:17 +0000
Module Name: src
Committed By: riz
Date: Thu Aug 29 15:46:17 UTC 2013
Modified Files:
src/sys/arch/arm/arm32: arm32_kvminit.c
src/sys/arch/arm/broadcom: bcm53xx_board.c
src/sys/arch/evbarm/beagle: beagle_machdep.c
Log Message:
Fix typo: VERBOSE_INIT_ARM, not VERBOSE_ARM_INIT. From
Dennis Ferguson in PR#48163.
To generate a diff of this commit:
cvs rdiff -u -r1.21 -r1.22 src/sys/arch/arm/arm32/arm32_kvminit.c
cvs rdiff -u -r1.15 -r1.16 src/sys/arch/arm/broadcom/bcm53xx_board.c
cvs rdiff -u -r1.54 -r1.55 src/sys/arch/evbarm/beagle/beagle_machdep.c
Please note that diffs are not public domain; they are subject to the
copyright notices on the relevant files.
>Unformatted:
(Contact us)
$NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007
The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.