Fix typo: VERBOSE_INIT_ARM, not VERBOSE_ARM_INIT.  From Dennis Ferguson in PR#48163.