sys/arch/arm/arm32/arm32_kvminit.c
@@ -1,4 +1,4 @@
-/*	$NetBSD: arm32_kvminit.c,v 1.21 2013/06/22 00:44:17 matt Exp $	*/
+/*	$NetBSD: arm32_kvminit.c,v 1.22 2013/08/29 15:46:17 riz Exp $	*/
 
 /*
  * Copyright (c) 2002, 2003, 2005  Genetec Corporation.  All rights reserved.
@@ -122,7 +122,7 @@
  */
 
 #include <sys/cdefs.h>
-__KERNEL_RCSID(0, "$NetBSD: arm32_kvminit.c,v 1.21 2013/06/22 00:44:17 matt Exp $");
+__KERNEL_RCSID(0, "$NetBSD: arm32_kvminit.c,v 1.22 2013/08/29 15:46:17 riz Exp $");
 
 #include <sys/param.h>
 #include <sys/device.h>
@@ -505,7 +505,7 @@ arm32_kernel_vm_init(vaddr_t kernel_vm_base, vaddr_t vectors, vaddr_t iovbase,
 		add_pages(bmi, &bmi->bmi_io_l2pt);
 	}
 
-#ifdef VERBOSE_ARM_INIT
+#ifdef VERBOSE_INIT_ARM
 	printf("%s: allocating stacks\n", __func__);
 #endif
 
